--- a/public/css/paradata.css
+++ b/public/css/paradata.css
@@ -140,12 +140,19 @@ header nav li a:hover {
 	padding: 0;
 	padding-top: 80px;
 }
+
+p {
+    font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+}
+
 .hero {
 	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/backgrounds/background-homepage-1.jpg");
 	background-color: #0387ab;
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-attachment: fixed; 
+	background-attachment: fixed;
 	color: #fff;
 }
 .parallax-mirror,
@@ -217,7 +224,7 @@ footer a:hover {
 	color: #75bbce;
 }
 footer p a {
-	font-weight: 400;
+	font-weight: 300;
 	text-decoration: none;
 }
 footer p a:hover {
